--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kanchu-frontend",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -26,6 +26,7 @@
     "@angular/forms": "^20.0.0",
     "@angular/material": "^20.2.14",
     "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
